--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "test": "npm run editorconfig & npm run stylelint & eslint source/js/",
+    "test": "npm run editorconfig & npm run stylelint & eslint source/",
     "build": "cross-env NODE_ENV=production gulp build && gulp imagemin",
     "start": "cross-env NODE_ENV=development gulp start",
     "webp": "gulp webp",
@@ -37,7 +37,6 @@
     "gulp-eslint": "6.0.0",
     "gulp-group-css-media-queries": "1.2.2",
     "gulp-html-beautify": "1.0.1",
-    "gulp-html-bemlinter": "2.1.2",
     "gulp-if": "3.0.0",
     "gulp-imagemin": "7.1.0",
     "gulp-lintspaces": "1.0.1",
@@ -51,9 +50,10 @@
     "imagemin-mozjpeg": "10.0.0",
     "imagemin-pngquant": "9.0.2",
     "imagemin-svgo": "10.0.1",
-    "pineglade-w3c": "1.0.3",
     "postcss-reporter": "7.0.5",
     "postcss-scss": "4.0.5",
+    "posthtml-bem-linter": "0.1.3",
+    "posthtml-w3c-validator": "1.1.0",
     "sass": "1.53.0",
     "stylelint": "13.13.1",
     "typograf": "6.15.1",
