--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "imagemin-mozjpeg": "10.0.0",
     "imagemin-pngquant": "9.0.2",
     "imagemin-svgo": "10.0.1",
+    "leaflet": "1.7.1",
     "postcss-reporter": "7.0.5",
     "postcss-scss": "4.0.5",
     "posthtml-bem-linter": "0.1.3",
